--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -3,4 +3,4 @@
     %p
       Data provided by Marvel
 
-      %a{:href => "https://developer.marvel.com/"} ©2020 MARVEL
+      %a{:href => "https://developer.marvel.com/", :target => "_blank"} ©2020 MARVEL
