--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,4 +1,4 @@
-h1 { color: red; }
+h1 { color: white; }
 
 element.style {
 }
@@ -114,4 +114,18 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
 
+}
+
+.jumbotron {
+   background: rgb(13, 12, 12); /* This is for ie8 and below */
+   background: rgba(13, 12, 12, 0.3);
+}
+
+#game_rules{
+  color: rgb(13, 12, 12);
+}
+
+#logo{
+  background-color: rgb(206, 17, 17);/* This is for ie8 and below */
+  background-color: rgba(206, 17, 17, 0.8);
 }
