--- a/app/views/characters/home.html.haml
+++ b/app/views/characters/home.html.haml
@@ -6,11 +6,11 @@
 
       %p.lead
         This web application was created using
-        =link_to('Marvel public API', 'https://developer.marvel.com/')
+        =link_to 'Marvel public API', 'https://developer.marvel.com/', target: "_blank"
         ="."
         All data is provided by Marvel. Click on the Superman to start game.
 
 
-  .start
-    = link_to start_game_characters_path do
-      \#{image_tag("superman-free-vector-graphic-on-pixabay-superman-vector-png-376_720.png")}
+    .start
+      = link_to start_game_characters_path do
+        \#{image_tag("superman-free-vector-graphic-on-pixabay-superman-vector-png-376_720.png")}
