--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,7 +1,8 @@
 %header.masthead.mb-auto
   .inner
     .masthead-brand
-      %h1 Marvel Combat Arena
+
+      %h3#logo MARVEL - Combat Arena
     %nav.nav.nav-masthead.justify-content-center
       %a.nav-link.active{:href => "/characters/home"} Home
       %a.nav-link{:href => "/characters/start_game"} Start New Game
