added params validations, connection by faraday, response validations, defined root_path, shitched superman vector for an actual Marvel character

--- a/app/views/characters/home.html.haml
+++ b/app/views/characters/home.html.haml
@@ -13,4 +13,4 @@
 
     .start
       = link_to start_game_characters_path do
-        \#{image_tag("superman-free-vector-graphic-on-pixabay-superman-vector-png-376_720.png")}
+        \#{image_tag("spiderman.png",  height: '110%', width: '110%')}
