--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,5 +10,11 @@
   %body.text-center
     .cover-container.d-flex.w-100.h-100.p-3.mx-auto.flex-column
       =render 'layouts/header'
+      -if flash[:alert]
+        .alert.alert-danger{:role => "alert"}
+          = flash[:alert]
+      -if flash[:notice]
+        .alert.alert-info{:role => "alert"}
+          = flash[:notice]
       =yield
       =render 'layouts/footer'
