--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,9 +1,6 @@
 %header.masthead.mb-auto
-  .inner
-    .masthead-brand
 
-      %h3#logo MARVEL - Combat Arena
-    %nav.nav.nav-masthead.justify-content-center
-      %a.nav-link.active{:href => "/characters/home"} Home
-      %a.nav-link{:href => "/characters/start_game"} Start New Game
-      %a.nav-link{:href => "#"} About
+  %nav.nav.nav-masthead.justify-content-center.bg-dark
+    %a.nav-link.active{:href => "/characters/home"} Home
+    %a.nav-link{:href => "/characters/start_game"} Start New Game
+    %a.nav-link{:href => "/characters/about"} About
